# sostrades-webapi

./: .flaskenv  .flaskenv_unittest  .gitignore  CREDITS.rst  HeadersIgnoreConfig.py  MANIFEST.in  NOTICE  README.md  README_api_v0.md  api.requirements.txt  headers_ignore_config.json  nose2.cfg  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  setup.py  sos_trades_api_data.py  sos_trades_api_main.py  sos_trades_api_message.py  sos_trades_api_post_processing.py  sos_trades_api_saas.py  sostrades-webapi.bat
LICENSES/: ISC
migrations/: README  env.py
migrations/versions/: 039eba317a4e_default_access_rights.py  0f797979d08f_col_default_app_group.py  18d8890a5e5f_add_pod_flavors.py  224990fccd32_default_group_v2.py  23659f27ce8a_add_oauth_state_management.py  26c265508f79_user_default_group.py  2db3dd3d7e5c_increase_size_of_repository.py  35ba4ee9fc53_add_error_management_on_study_object.py  40ca717b5c0a_first_cleaned_migration.py  45d4e338d0d8_add_keycloak_group_in_group.py  4800f7e11ae2_add_stand_alone_status.py  4d179998acd8_add_last_opened_study.py  59ef3f9fbb52_add_no_execution_profile.py  5acd0bb7bad9_add_studycase_creation_status.py  5b6303f4ab8e_update_pod_allocation.py  5e995cf0ba49_add_information_about_deleting_a_column_.py  6742a7abbc12_update_user_preference.py  6d471f14fb35_update_column_execution_message.py  6fde15c1f0d5_default_group_v3.py  7d5cb767db48_add_user_api_key_table.py  7df43d135e7c_adding_dataset_information_to_.py  81ddc6b58939_add_pod_status_monitoring.py  89b66a62d3a7_remove_displine_and_type_in_.py  9187d11fbebc_add_dataset_data_path_to_studycasechange.py  (+13 more)
server_scripts/: launch_calculation.py  launch_server_api_v0.py  launch_server_data.py  launch_server_main.py  launch_server_message.py  launch_server_post_processing.py
sos_trades_api/: api_v0_server.py  base_server.py  config.py  data_server.py  main_server.py  message_server.py  post_processing_server.py  sos_trades_config.yaml  version.info
sos_trades_saas/: README.md  saas_server.py
templates/: study_case_raw_data.html  test.html
(+190 files in other folders)
