[project]
name = "sostrades-webapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Airbus, Capgemini", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.2.1",
    "eventlet==0.40.0",
    "flask==2.3.3",
    "flask-jwt-extended==4.6.0",
    "flask-migrate==4.0.7",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==2.5.1",
    "furl==2.1.4",
    "graphviz==0.20.3",
    "jinja2==3.1.4",
    "kubernetes>=33.1.0",
    "lxml==5.3.2",
    "memory-profiler==0.61.0",
    "mysqlclient==2.2.7",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.24.0",
    "psutil==7.0.0",
    "pyjwt==2.10.1",
    "pytest==8.1.2",
    "pytest-cov==6.2.0",
    "pytest-durations==1.5.2",
    "pytest-xdist==3.7.0",
    "python-dotenv==1.1.0",
    "python-engineio==4.5.1",
    "python-keycloak==5.5.1",
    "python-ldap ; sys_platform == 'win32'",
    "python-socketio==5.8.0",
    "python3-saml==1.16.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "simplejson==3.20.1",
    "sostrades-core>=0.1.1",
    "sostrades-ontology>=0.1.0",
    "sqlalchemy==1.4.52",
    "urllib3==2.6.0",
    "werkzeug==2.3.8",
    "xmlsec==1.3.14",
]

[build-system]
requires = ["uv-build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/os-climate/sostrades-webapi"

[tool.uv]
extra-index-url = ["https://test.pypi.org/simple/"]
index-strategy = "unsafe-best-match"

[tool.uv.build-backend]
module-name = "sos_trades_api"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
table-logger = { git = "https://github.com/AleksTk/table-logger.git", rev = "v0.3.7" }
python-ldap = { url = "https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.4-1/python_ldap-3.4.4-cp312-cp312-win_amd64.whl" }

